Table Alignment Fix

--- a/app/css/_common.css.scss
+++ b/app/css/_common.css.scss
@@ -35,3 +35,7 @@ h2.huge{
 .providers .provider i{
   margin-right: 5px;
 }
+
+.table td.text-right{
+  text-align: right;
+}
